MNMS-232 Story: 이미지 방식 변경...